--- a/data_analysis/EDA_Tracking.ipynb
+++ b/data_analysis/EDA_Tracking.ipynb
@@ -33,7 +33,7 @@
      "output_type": "stream",
      "text": [
       "\u001b[34m\u001b[1mwandb\u001b[0m: Currently logged in as: \u001b[33mdatamix-ai\u001b[0m (use `wandb login --relogin` to force relogin)\n",
-      "\u001b[34m\u001b[1mwandb\u001b[0m: wandb version 0.12.21 is available!  To upgrade, please run:\n",
+      "\u001b[34m\u001b[1mwandb\u001b[0m: wandb version 0.13.4 is available!  To upgrade, please run:\n",
       "\u001b[34m\u001b[1mwandb\u001b[0m:  $ pip install wandb --upgrade\n"
      ]
     },
@@ -42,10 +42,10 @@
       "text/html": [
        "\n",
        "                Tracking run with wandb version 0.10.21<br/>\n",
-       "                Syncing run <strong style=\"color:#cdcd00\">frosty-donkey-7</strong> to <a href=\"https://wandb.ai\" target=\"_blank\">Weights & Biases</a> <a href=\"https://docs.wandb.com/integrations/jupyter.html\" target=\"_blank\">(Documentation)</a>.<br/>\n",
-       "                Project page: <a href=\"https://wandb.ai/datamix-ai/exercise_4\" target=\"_blank\">https://wandb.ai/datamix-ai/exercise_4</a><br/>\n",
-       "                Run page: <a href=\"https://wandb.ai/datamix-ai/exercise_4/runs/1x2naefh\" target=\"_blank\">https://wandb.ai/datamix-ai/exercise_4/runs/1x2naefh</a><br/>\n",
-       "                Run data is saved locally in <code>/Users/mxagar/nexo/git_repositories/udacity-cd0581-building-a-reproducible-model-workflow-exercises/lesson-2-data-exploration-and-preparation/exercises/exercise_4/starter/wandb/run-20220723_121356-1x2naefh</code><br/><br/>\n",
+       "                Syncing run <strong style=\"color:#cdcd00\">frosty-forest-2</strong> to <a href=\"https://wandb.ai\" target=\"_blank\">Weights & Biases</a> <a href=\"https://docs.wandb.com/integrations/jupyter.html\" target=\"_blank\">(Documentation)</a>.<br/>\n",
+       "                Project page: <a href=\"https://wandb.ai/datamix-ai/music_genre_classification\" target=\"_blank\">https://wandb.ai/datamix-ai/music_genre_classification</a><br/>\n",
+       "                Run page: <a href=\"https://wandb.ai/datamix-ai/music_genre_classification/runs/34elf6da\" target=\"_blank\">https://wandb.ai/datamix-ai/music_genre_classification/runs/34elf6da</a><br/>\n",
+       "                Run data is saved locally in <code>/Users/mxagar/nexo/git_repositories/music_genre_classification/data_analysis/wandb/run-20221016_091356-34elf6da</code><br/><br/>\n",
        "            "
       ],
       "text/plain": [
@@ -59,7 +59,7 @@
    "source": [
     "# Create a run for our project; name automatically generated\n",
     "run = wandb.init(\n",
-    "  project=\"exercise_4\",\n",
+    "  project=\"music_genre_classification\",\n",
     "  save_code=True\n",
     ")"
    ]
@@ -254,7 +254,7 @@
     "# Open the artifact: the name is not the filename,\n",
     "# but the name we used when registering it\n",
     "# To download the file we need to call .file()\n",
-    "artifact = run.use_artifact(\"exercise_4/genres_mod.parquet:latest\")\n",
+    "artifact = run.use_artifact(\"music_genre_classification/genres_mod.parquet:latest\")\n",
     "df = pd.read_parquet(artifact.file())\n",
     "df.head()"
    ]
@@ -268,7 +268,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f56069a24c3d4244bd61765ca347fcb7",
+       "model_id": "d5f1b00ecaeb428f8a195876d96d174a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -282,7 +282,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c70e94ffcb5443c08d234998f336babf",
+       "model_id": "f2e9fd22775c42439d2e8a46185f381f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -310,7 +310,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "fdb5e678f5bb40ad8d328c7fabd6b97a",
+       "model_id": "ef8f63a33e2b4db688e5d421ef3a8fbf",
        "version_major": 2,
        "version_minor": 0
       },
@@ -365,7 +365,7 @@
     {
      "data": {
       "text/html": [
-       "<br/>Waiting for W&B process to finish, PID 4704<br/>Program ended successfully."
+       "<br/>Waiting for W&B process to finish, PID 73151<br/>Program ended successfully."
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -382,7 +382,7 @@
        "version_minor": 0
       },
       "text/plain": [
-       "VBox(children=(Label(value=' 0.05MB of 0.05MB uploaded (0.01MB deduped)\\r'), FloatProgress(value=1.0, max=1.0)…"
+       "VBox(children=(Label(value=' 0.08MB of 0.08MB uploaded (0.02MB deduped)\\r'), FloatProgress(value=1.0, max=1.0)…"
       ]
      },
      "metadata": {},
@@ -391,7 +391,7 @@
     {
      "data": {
       "text/html": [
-       "Find user logs for this run at: <code>/Users/mxagar/nexo/git_repositories/udacity-cd0581-building-a-reproducible-model-workflow-exercises/lesson-2-data-exploration-and-preparation/exercises/exercise_4/starter/wandb/run-20220723_121356-1x2naefh/logs/debug.log</code>"
+       "Find user logs for this run at: <code>/Users/mxagar/nexo/git_repositories/music_genre_classification/data_analysis/wandb/run-20221016_091356-34elf6da/logs/debug.log</code>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -403,7 +403,7 @@
     {
      "data": {
       "text/html": [
-       "Find internal logs for this run at: <code>/Users/mxagar/nexo/git_repositories/udacity-cd0581-building-a-reproducible-model-workflow-exercises/lesson-2-data-exploration-and-preparation/exercises/exercise_4/starter/wandb/run-20220723_121356-1x2naefh/logs/debug-internal.log</code>"
+       "Find internal logs for this run at: <code>/Users/mxagar/nexo/git_repositories/music_genre_classification/data_analysis/wandb/run-20221016_091356-34elf6da/logs/debug-internal.log</code>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -428,7 +428,7 @@
      "data": {
       "text/html": [
        "\n",
-       "                    <br/>Synced <strong style=\"color:#cdcd00\">frosty-donkey-7</strong>: <a href=\"https://wandb.ai/datamix-ai/exercise_4/runs/1x2naefh\" target=\"_blank\">https://wandb.ai/datamix-ai/exercise_4/runs/1x2naefh</a><br/>\n",
+       "                    <br/>Synced <strong style=\"color:#cdcd00\">frosty-forest-2</strong>: <a href=\"https://wandb.ai/datamix-ai/music_genre_classification/runs/34elf6da\" target=\"_blank\">https://wandb.ai/datamix-ai/music_genre_classification/runs/34elf6da</a><br/>\n",
        "                "
       ],
       "text/plain": [
@@ -459,14 +459,6 @@
     "# You will see an option {} in the left panel.\n",
     "# Click on it to see the uploaded Jupyter notebook."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a5751722",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -486,6 +478,11 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.8.13"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "b0fa6594d8f4cbf19f97940f81e996739fb7646882a419484c72d19e05852a7e"
+   }
   }
  },
  "nbformat": 4,
