--- a/data_analysis/EDA_Tracking.ipynb
+++ b/data_analysis/EDA_Tracking.ipynb
@@ -1,6 +1,38 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "be13e141",
+   "metadata": {},
+   "source": [
+    "# Exploratory Data Analysis - Tracked with Weights and Biases"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4e5d37f7",
+   "metadata": {},
+   "source": [
+    "This notebook carries out basic Exploratory Data Analysis (EDA) of the [Dataset of songs in Spotify](https://www.kaggle.com/datasets/mrmorj/dataset-of-songs-in-spotify); its **goal is to showcase how to track notebook executions with Weight and Biases**. It assumes:\n",
+    "\n",
+    "- The dataset has been uploaded to W&B using the CLI; see the `README.md` file.\n",
+    "- You have started this notebook via `mlflow run .` to correctly create the required conda environemnt specified in `conda.yaml`; see the `README.md` file.\n",
+    "\n",
+    "All in all, the follosing tasks are carried out here:\n",
+    "\n",
+    "- Start a new run `run = wandb.init(project=\"music_genre_classification\", save_code=True)`; `save_code=True` makes possible to track the code execution.\n",
+    "- Download the dataset artifact and explore it briefly.\n",
+    "- Perform a simple EDA:\n",
+    "  - Run `pandas_profiling.ProfileReport()`.\n",
+    "  - Drop duplicates.\n",
+    "  - Impute missing song and tile values with `''`.\n",
+    "  - Create new text field which is the concatenation of the title and the song name.\n",
+    "- Finish the run: `run.finish()`.\n",
+    "\n",
+    "To have a look at the data modeling, see th eother notebooks -- which are not tracked!"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "09caa1bc",
@@ -42,10 +74,10 @@
       "text/html": [
        "\n",
        "                Tracking run with wandb version 0.10.21<br/>\n",
-       "                Syncing run <strong style=\"color:#cdcd00\">frosty-forest-2</strong> to <a href=\"https://wandb.ai\" target=\"_blank\">Weights & Biases</a> <a href=\"https://docs.wandb.com/integrations/jupyter.html\" target=\"_blank\">(Documentation)</a>.<br/>\n",
+       "                Syncing run <strong style=\"color:#cdcd00\">cerulean-rain-3</strong> to <a href=\"https://wandb.ai\" target=\"_blank\">Weights & Biases</a> <a href=\"https://docs.wandb.com/integrations/jupyter.html\" target=\"_blank\">(Documentation)</a>.<br/>\n",
        "                Project page: <a href=\"https://wandb.ai/datamix-ai/music_genre_classification\" target=\"_blank\">https://wandb.ai/datamix-ai/music_genre_classification</a><br/>\n",
-       "                Run page: <a href=\"https://wandb.ai/datamix-ai/music_genre_classification/runs/34elf6da\" target=\"_blank\">https://wandb.ai/datamix-ai/music_genre_classification/runs/34elf6da</a><br/>\n",
-       "                Run data is saved locally in <code>/Users/mxagar/nexo/git_repositories/music_genre_classification/data_analysis/wandb/run-20221016_091356-34elf6da</code><br/><br/>\n",
+       "                Run page: <a href=\"https://wandb.ai/datamix-ai/music_genre_classification/runs/3g2oxyaw\" target=\"_blank\">https://wandb.ai/datamix-ai/music_genre_classification/runs/3g2oxyaw</a><br/>\n",
+       "                Run data is saved locally in <code>/Users/mxagar/nexo/git_repositories/music_genre_classification/data_analysis/wandb/run-20221016_095800-3g2oxyaw</code><br/><br/>\n",
        "            "
       ],
       "text/plain": [
@@ -68,6 +100,20 @@
    "cell_type": "code",
    "execution_count": 4,
    "id": "e0cd426e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Open the artifact: the name is not the filename,\n",
+    "# but the name we used when registering it\n",
+    "# To download the file we need to call .file()\n",
+    "artifact = run.use_artifact(\"music_genre_classification/genres_mod.parquet:latest\")\n",
+    "df = pd.read_parquet(artifact.file())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "a6adb980",
    "metadata": {},
    "outputs": [
     {
@@ -245,30 +291,66 @@
        "4  None  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Open the artifact: the name is not the filename,\n",
-    "# but the name we used when registering it\n",
-    "# To download the file we need to call .file()\n",
-    "artifact = run.use_artifact(\"music_genre_classification/genres_mod.parquet:latest\")\n",
-    "df = pd.read_parquet(artifact.file())\n",
     "df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
+   "id": "88a4b257",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 42896 entries, 0 to 42895\n",
+      "Data columns (total 17 columns):\n",
+      " #   Column            Non-Null Count  Dtype  \n",
+      "---  ------            --------------  -----  \n",
+      " 0   danceability      42896 non-null  float64\n",
+      " 1   energy            42896 non-null  float64\n",
+      " 2   key               42896 non-null  int64  \n",
+      " 3   loudness          33726 non-null  float64\n",
+      " 4   mode              42896 non-null  int64  \n",
+      " 5   speechiness       42896 non-null  float64\n",
+      " 6   acousticness      42896 non-null  float64\n",
+      " 7   instrumentalness  42896 non-null  float64\n",
+      " 8   liveness          42896 non-null  float64\n",
+      " 9   valence           42896 non-null  float64\n",
+      " 10  tempo             42896 non-null  float64\n",
+      " 11  type              42896 non-null  object \n",
+      " 12  duration_ms       42896 non-null  int64  \n",
+      " 13  time_signature    42896 non-null  int64  \n",
+      " 14  genre             42896 non-null  object \n",
+      " 15  song_name         21811 non-null  object \n",
+      " 16  title             21079 non-null  object \n",
+      "dtypes: float64(9), int64(4), object(4)\n",
+      "memory usage: 5.6+ MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "df.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "id": "60b1e1a8",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d5f1b00ecaeb428f8a195876d96d174a",
+       "model_id": "7e25c7513bac453a980edc498ef0301d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -282,7 +364,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f2e9fd22775c42439d2e8a46185f381f",
+       "model_id": "18532a879dfa4f2eae69544802670614",
        "version_major": 2,
        "version_minor": 0
       },
@@ -310,7 +392,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ef8f63a33e2b4db688e5d421ef3a8fbf",
+       "model_id": "d75ac40de43b429490ed4e94823daf24",
        "version_major": 2,
        "version_minor": 0
       },
@@ -330,7 +412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "id": "00ed13c7-e925-4000-b7f8-1dca7aa78c97",
    "metadata": {},
    "outputs": [],
@@ -341,7 +423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "id": "dac44836",
    "metadata": {},
    "outputs": [],
@@ -358,14 +440,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "id": "e8a34f93",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
-       "<br/>Waiting for W&B process to finish, PID 73151<br/>Program ended successfully."
+       "<br/>Waiting for W&B process to finish, PID 77270<br/>Program ended successfully."
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -382,7 +464,7 @@
        "version_minor": 0
       },
       "text/plain": [
-       "VBox(children=(Label(value=' 0.08MB of 0.08MB uploaded (0.02MB deduped)\\r'), FloatProgress(value=1.0, max=1.0)…"
+       "VBox(children=(Label(value=' 0.05MB of 0.05MB uploaded (0.01MB deduped)\\r'), FloatProgress(value=1.0, max=1.0)…"
       ]
      },
      "metadata": {},
@@ -391,7 +473,7 @@
     {
      "data": {
       "text/html": [
-       "Find user logs for this run at: <code>/Users/mxagar/nexo/git_repositories/music_genre_classification/data_analysis/wandb/run-20221016_091356-34elf6da/logs/debug.log</code>"
+       "Find user logs for this run at: <code>/Users/mxagar/nexo/git_repositories/music_genre_classification/data_analysis/wandb/run-20221016_095800-3g2oxyaw/logs/debug.log</code>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -403,7 +485,7 @@
     {
      "data": {
       "text/html": [
-       "Find internal logs for this run at: <code>/Users/mxagar/nexo/git_repositories/music_genre_classification/data_analysis/wandb/run-20221016_091356-34elf6da/logs/debug-internal.log</code>"
+       "Find internal logs for this run at: <code>/Users/mxagar/nexo/git_repositories/music_genre_classification/data_analysis/wandb/run-20221016_095800-3g2oxyaw/logs/debug-internal.log</code>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -415,7 +497,7 @@
     {
      "data": {
       "text/html": [
-       "Synced 5 W&B file(s), 0 media file(s), 3 artifact file(s) and 1 other file(s)"
+       "Synced 6 W&B file(s), 0 media file(s), 2 artifact file(s) and 1 other file(s)"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -428,7 +510,7 @@
      "data": {
       "text/html": [
        "\n",
-       "                    <br/>Synced <strong style=\"color:#cdcd00\">frosty-forest-2</strong>: <a href=\"https://wandb.ai/datamix-ai/music_genre_classification/runs/34elf6da\" target=\"_blank\">https://wandb.ai/datamix-ai/music_genre_classification/runs/34elf6da</a><br/>\n",
+       "                    <br/>Synced <strong style=\"color:#cdcd00\">cerulean-rain-3</strong>: <a href=\"https://wandb.ai/datamix-ai/music_genre_classification/runs/3g2oxyaw\" target=\"_blank\">https://wandb.ai/datamix-ai/music_genre_classification/runs/3g2oxyaw</a><br/>\n",
        "                "
       ],
       "text/plain": [
@@ -450,7 +532,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "id": "e1e97a18",
    "metadata": {},
    "outputs": [],
