--- a/data_analysis/Modeling.ipynb
+++ b/data_analysis/Modeling.ipynb
@@ -19,7 +19,9 @@
     "\n",
     "Overview of contents:\n",
     "\n",
-    "1. [Basic EDA](#1.-basic-eda)"
+    "1. [Basic EDA](#1.-basic-eda)\n",
+    "2. [Preprocessing: Basic Cleaning and Feature Engineering](#2.-Preprocessing:-Basic-Cleaning-and-Feature Engineering)\n",
+    "3. C"
    ]
   },
   {
@@ -609,9 +611,49 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "90ed5f66",
+   "metadata": {},
+   "source": [
+    "## 2. Preprocessing: Basic Cleaning and Feature Engineering"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1ad9ac50",
+   "metadata": {},
+   "source": [
+    "This basic preprocessing should not include anything sophisticated nor anything that should be applied to new incoming datapoints; those transformations should go into the processing part of the inference pipeline."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "5d8b2d2d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Remove duplicates\n",
+    "df = df.drop_duplicates().reset_index(drop=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "f5f20418",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# A minimal feature engineering step: a new feature = song name + title\n",
+    "df['title'].fillna(value='', inplace=True)\n",
+    "df['song_name'].fillna(value='', inplace=True)\n",
+    "df['text_feature'] = df['title'] + ' ' + df['song_name']"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6b11b386",
+   "id": "19f37c1c",
    "metadata": {},
    "outputs": [],
    "source": []
