--- a/data_analysis/Modeling.ipynb
+++ b/data_analysis/Modeling.ipynb
@@ -20,8 +20,11 @@
     "Overview of contents:\n",
     "\n",
     "1. [Basic EDA](#1.-basic-eda)\n",
-    "2. [Preprocessing: Basic Cleaning and Feature Engineering](#2.-Preprocessing:-Basic-Cleaning-and-Feature Engineering)\n",
-    "3. C"
+    "2. [Preprocessing](#2.-Preprocessing)\n",
+    "3. [Check Data](#3.-Check-Data)\n",
+    "4. [Segregate Data](#4.-Segregate-Data)\n",
+    "5. [Inference Pipeline: Processing + Model](#5.-Inference-Pipeline:-Processing-+-Model)\n",
+    "6. [Evaluation](#6.-Evaluation)\n"
    ]
   },
   {
@@ -662,7 +665,7 @@
    "id": "f6de4aea",
    "metadata": {},
    "source": [
-    "## 2. Preprocessing: Basic Cleaning and Feature Engineering"
+    "## 2. Preprocessing"
    ]
   },
   {
@@ -1421,7 +1424,7 @@
   {
    "cell_type": "code",
    "execution_count": 54,
-   "id": "8d86dab8",
+   "id": "c1c75f7b",
    "metadata": {},
    "outputs": [
     {
@@ -1444,7 +1447,7 @@
   {
    "cell_type": "code",
    "execution_count": 56,
-   "id": "e8780774",
+   "id": "3512459d",
    "metadata": {},
    "outputs": [
     {
