--- a/data_analysis/Modeling.ipynb
+++ b/data_analysis/Modeling.ipynb
@@ -266,11 +266,33 @@
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (4068863288.py, line 5)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  Cell \u001b[0;32mIn [5], line 5\u001b[0;36m\u001b[0m\n\u001b[0;31m    df.info()s\u001b[0m\n\u001b[0m             ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 42896 entries, 0 to 42895\n",
+      "Data columns (total 17 columns):\n",
+      " #   Column            Non-Null Count  Dtype  \n",
+      "---  ------            --------------  -----  \n",
+      " 0   danceability      42896 non-null  float64\n",
+      " 1   energy            42896 non-null  float64\n",
+      " 2   key               42896 non-null  int64  \n",
+      " 3   loudness          33726 non-null  float64\n",
+      " 4   mode              42896 non-null  int64  \n",
+      " 5   speechiness       42896 non-null  float64\n",
+      " 6   acousticness      42896 non-null  float64\n",
+      " 7   instrumentalness  42896 non-null  float64\n",
+      " 8   liveness          42896 non-null  float64\n",
+      " 9   valence           42896 non-null  float64\n",
+      " 10  tempo             42896 non-null  float64\n",
+      " 11  type              42896 non-null  object \n",
+      " 12  duration_ms       42896 non-null  int64  \n",
+      " 13  time_signature    42896 non-null  int64  \n",
+      " 14  genre             42896 non-null  object \n",
+      " 15  song_name         21811 non-null  object \n",
+      " 16  title             21079 non-null  object \n",
+      "dtypes: float64(9), int64(4), object(4)\n",
+      "memory usage: 5.6+ MB\n"
      ]
     }
    ],
@@ -279,7 +301,7 @@
     "# - loudness\n",
     "# - song_name\n",
     "# - title (album?)\n",
-    "df.info()s"
+    "df.info()"
    ]
   },
   {
@@ -1523,7 +1545,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.13"
+   "version": "3.7.13"
   }
  },
  "nbformat": 4,
